# aoc_2021

./: Cargo.toml  make_day.sh
input/: day_4_test_column  day_4_test_row
src/: main.rs  my_benchmark.rs
src/day_02/: mod.rs
src/day_04/: mod.rs
src/day_05/: README.md  mod.rs
src/day_06/: mod.rs
src/day_07/: mod.rs
src/day_08/: mod.rs
src/day_09/: mod.rs
src/day_1/: mod.rs
src/day_17/: mod.rs
src/day_3/: mod.rs
