[package]
name = "aoc_2021"
version = "0.1.0"
authors = ["Paul <pcvonz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
raylib = "3.7.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
path = "src/my_benchmark.rs"
harness = false
